# Communicator

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/Forms/: View.ui
Client/Include/: Client.hpp  View.hpp
Client/Source/: Client.cpp  View.cpp  main.cpp
Common/: CMakeLists.txt
Common/Include/: Message.hpp  MessageReceiver.hpp  MessageSender.hpp  ServerSettings.hpp  Utils.hpp
Common/Include/Messages/: ClientSetupReq.hpp  MessageTypeTraits.hpp  MessagesIds.hpp
Common/Source/: MessageReceiver.cpp  MessageSender.cpp  Utils.cpp
Server/: CMakeLists.txt
Server/Include/: Connection.hpp  Server.hpp
Server/Source/: Connection.cpp  Server.cpp  main.cpp
