cmake_minimum_required(VERSION 3.1.0)

project(Communicator)

find_package(Qt5Network)
set(CMAKE_CXX_STANDARD 17)

set(SOURCE_FILES_EXT cpp)
set(HEADER_FILES_EXT hpp)
set(SOURCE_FILES_DIR_NAME Source)
set(HEADER_FILES_DIR_NAME Include)

set(SERVER_DIR_NAME Server)
set(CLIENT_DIR_NAME Client)
set(COMMON_DIR_NAME Common)

set(SERVER_DIR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/${SERVER_DIR_NAME})
set(CLIENT_DIR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/${CLIENT_DIR_NAME})
set(COMMON_DIR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/${COMMON_DIR_NAME})

set(SERVER_SOURCE_FILES_DIR ${SERVER_DIR_PATH}/${SOURCE_FILES_DIR_NAME})
set(CLIENT_SOURCE_FILES_DIR ${CLIENT_DIR_PATH}/${SOURCE_FILES_DIR_NAME})
set(COMMON_SOURCE_FILES_DIR ${COMMON_DIR_PATH}/${SOURCE_FILES_DIR_NAME})

set(SERVER_HEADER_FILES_DIR ${SERVER_DIR_PATH}/${HEADER_FILES_DIR_NAME})
set(CLIENT_HEADER_FILES_DIR ${CLIENT_DIR_PATH}/${HEADER_FILES_DIR_NAME})
set(COMMON_HEADER_FILES_DIR ${COMMON_DIR_PATH}/${HEADER_FILES_DIR_NAME})

add_subdirectory(Server)
add_subdirectory(Client)
