cmake_minimum_required(VERSION 3.1.0)

project(Communicator)

find_package(Qt5Network REQUIRED)
find_package(Qt5Widgets REQUIRED)
set(CMAKE_CXX_STANDARD 17)

set(SOURCE_FILES_EXT cpp)
set(HEADER_FILES_EXT hpp)
set(FORM_FILES_EXT ui)
set(SOURCE_FILES_DIR_NAME Source)
set(HEADER_FILES_DIR_NAME Include)
set(FORM_FILES_DIR_NAME Forms)

set(SERVER_DIR_NAME Server)
set(CLIENT_DIR_NAME Client)
set(COMMON_DIR_NAME Common)

set(SERVER_DIR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/${SERVER_DIR_NAME})
set(CLIENT_DIR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/${CLIENT_DIR_NAME})
set(COMMON_DIR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/${COMMON_DIR_NAME})

set(SERVER_SOURCE_FILES_DIR ${SERVER_DIR_PATH}/${SOURCE_FILES_DIR_NAME})
set(CLIENT_SOURCE_FILES_DIR ${CLIENT_DIR_PATH}/${SOURCE_FILES_DIR_NAME})
set(COMMON_SOURCE_FILES_DIR ${COMMON_DIR_PATH}/${SOURCE_FILES_DIR_NAME})
set(FORM_FILES_DIR ${CLIENT_DIR_PATH}/${FORM_FILES_DIR_NAME})

set(SERVER_HEADER_FILES_DIR ${SERVER_DIR_PATH}/${HEADER_FILES_DIR_NAME})
set(CLIENT_HEADER_FILES_DIR ${CLIENT_DIR_PATH}/${HEADER_FILES_DIR_NAME})
set(COMMON_HEADER_FILES_DIR ${COMMON_DIR_PATH}/${HEADER_FILES_DIR_NAME})

set(BOOST_DIR /usr/local/boost-1.66.0)
set(BOOST_HEADER_FILES_DIR ${BOOST_DIR}/include)

add_subdirectory(Server)
add_subdirectory(Client)
add_subdirectory(Common)
